# xarray-subset-grid

./: .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml
.github/workflows/: codecov.yml  pypi.yml  test.yaml
docs/: contributing.rst  installation.rst  requirements.txt
tests/: conftest.py  test_utils.py
tests/example_data/: 2D-rectangular_grid_wind.nc  rectangular_grid_decreasing.nc
tests/test_grids/: test_regular_grid.py  test_ugrid.py
tests/test_visualization/: test_mpl_plotting.py
xarray_subset_grid/: accessor.py  utils.py
xarray_subset_grid/grids/: regular_grid.py  regular_grid_2d.py  ugrid.py
