[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=72", "setuptools-scm[toml]>=8", "wheel" ]

[project]
name = "xarray-subset-grid"
description = "Subset Xarray datasets in time and space"
readme = "README.md"
keywords = [ "xarray" ]
license = { file = "LICENSE" }
authors = [
  { name = "Christopher H. Barker", email = "chris.barker@noaa.gov" },
  { name = "Matthew Iannucci", email = "matt.iannucci@tetratech.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
dynamic = [ "version" ]
dependencies = [
  "cf-xarray",
  "cftime",
  "dask",
  # "dask[complete]", # getting errors from pixi with the "complete"
  "netcdf4",
  "numpy",
  "xarray>=2024.6",
]
optional-dependencies.dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "sphinx",
  "sphinx-rtd-theme",
]
optional-dependencies.examples = [ "fsspec", "h5netcdf", "matplotlib", "s3fs", "zarr<3" ]
urls."Homepage" = "https://github.com/asascience-open/xarray-subset-grid"

[tool.setuptools]
packages = [ "xarray_subset_grid" ]

[tool.setuptools_scm]
write_to = "xarray_subset_grid/_version.py"

[tool.ruff]
target-version = "py310"
# Use a longer line length.
line-length = 100
builtins = [ "ellipsis" ]
extend-exclude = [ "docs", "xarray_subset_grid/_version.py" ]
# Prefer single quotes over double quotes.
format.quote-style = "double"
# Use `\n` line endings for all files
format.line-ending = "lf"
format.exclude = [ "*.ipynb" ]
lint.select = [
  "E",   # Pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "TID", # flake8-tidy-imports (absolute imports)
  "UP",  # Pyupgrade
  "W",
]
lint.ignore = [
  "E402", # module level import not at top of file
  "E731", # do not assign a lambda expression, use a def
]
lint.extend-safe-fixes = [
  "TID252", # absolute imports
]

[tool.pyright]
venvPath = "."
venv = "venv"

[tool.pixi]
dependencies.python = ">=3.10"
dependencies.numpy = "*"
dependencies.xarray = ">=2024.6"
dependencies.pandas = "*"
dependencies.cf_xarray = "*"
dependencies.dask = "*"
dependencies.fsspec = "*"
dependencies.s3fs = "*"
dependencies.zarr = "<3"
dependencies.netcdf4 = "*"
dependencies.h5netcdf = "*"
environments.default = { solve-group = "default" }
environments.dev = { features = [ "dev" ], solve-group = "default" }
environments.examples = { features = [ "examples" ], solve-group = "default" }
environments.all = { features = [ "dev", "examples" ], solve-group = "default" }
environments.test310 = [
  "dev",
  "py310",
]  # implicit: test310 = ["dev", "py310", "default"]
environments.test311 = [ "dev", "py311" ]
environments.test312 = [ "dev", "py312" ]
environments.test313 = [ "dev", "py313" ]
environments.test314 = [ "dev", "py314" ]
environments.testcov = [ "dev", "py314" ]
feature.dev.dependencies.ruff = "*"
feature.dev.dependencies.pre-commit = "*"
feature.dev.dependencies.pyright = "*"
feature.dev.dependencies.pytest = "*"
feature.dev.dependencies.pytest-cov = "<7"
feature.dev.dependencies.sphinx = "*"
feature.dev.dependencies.sphinx-rtd-theme = "*"
feature.dev.dependencies.pip = "*"
feature.dev.dependencies.setuptools_scm = "*"
feature.dev.dependencies.python-build = "*"
feature.dev.dependencies.sphinx-autodoc-typehints = "*"
feature.dev.dependencies.myst-nb = "*"
feature.dev.tasks.lint = "ruff check tests xarray_subset_grid"
feature.dev.tasks.test = "pytest tests/"
feature.dev.tasks.test_all = "pytest --online tests/"
feature.dev.tasks.test_cov = "pytest --cov=xarray_subset_grid tests"
feature.examples.dependencies.matplotlib = "*"
feature.examples.dependencies.jupyter = "*"
feature.examples.dependencies.ipython = "*"
feature.py310.dependencies.python = "~=3.10"
feature.py311.dependencies.python = "~=3.11"
feature.py312.dependencies.python = "~=3.12"
feature.py313.dependencies.python = "~=3.13"
feature.py314.dependencies.python = "~=3.14"
pypi-dependencies.xarray_subset_grid = { path = ".", editable = true }
system-requirements.macos = "11.0"
workspace.channels = [ "conda-forge" ]
workspace.platforms = [ "linux-64", "osx-arm64", "osx-64", "win-64" ]
